# blog

./: .gitignore  Gemfile  README.md  _config.yml  about.md
_data/: navigation.yml
_includes/: envoy-config-generator.html  envoy-sidecar-configuration-generator.html  footer.html  github.html  head.html  toc.md
_posts/: 2020-11-01-Hosting-a-Blog-the-GitOps-Way.md  2020-11-x-Matrix-deployment-structure-with-kustomize.md  2020-12-01-Hosting-a-Blog-the-GitOps-Way.md  2021-02-21-Multicluster-Monitoring-with-Prometheus.md  2021-02-22-Multicluster-Monitoring-with-Prometheus.md  2021-04-11-Setting-up-an-Envoy-Sidecar-in-5-Minutes.md  2021-04-18-envoy-in-5-minutes.md  2021-04-25-artificial-latency.md  2021-05-02-throughput-paradox.md  2021-05-05-Envoy-sidecar-configuration-generator.md  2021-05-06-Envoy-sidecar-configuration-generator.md  2021-07-11-A-first-look-at-ONNX-for-Scikit-Learn.md  2021-09-09-Machine-Learning-Models-Light-as-a-Feather.md  2021-12-20-Load-Testing-for-Flink-Statefun.md  2022-04-15-testing-a-flink-stateful-function-service.md  2022-06-18-locating-memory-leaks-in-services-part1.md  (+4 more)
code/2021-05-01-throughput-paradox/: README.md  api_queue_length_limit.py  api_waiting_time_limit.py  pyproject.toml  results_queue_length_limits.txt  results_waiting_time_limits.txt
code/2021-09-09-Machine-Learning-Models-Light-as-a-Feather/api-sklearn/: api.py  pyproject.toml
code/2021-09-09-Machine-Learning-Models-Light-as-a-Feather/training/: benchmark.py  pyproject.toml  training.ipynb
code/2021-09-09-Machine-Learning-Models-Light-as-a-Feather/training/output/: classifier.onnx
(+53 files in other folders)
