[tool.poetry]
name = "demo-api"
version = "0.1.0"
description = ""
authors = ["chr1st1ank <chr1st1ank@krudewig-online.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.63.0"}
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
