[tool.poetry]
name = "language-classification-training"
version = "0.1.0"
description = ""
authors = ["chr1st1ank <chr1st1ank@krudewig-online.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^0.24.2"
pandas = "^1.3.0"
skl2onnx = "^1.9.0"
onnx = "^1.9.0"
ipython = "^7.31.1"
jupyter = "^1.0.0"
onnxruntime = "^1.8.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
